Anonymous | Login | 2021-01-18 08:22 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0022325 | Community | [OCCT] OCCT:Foundation Classes | public | 2011-03-16 16:55 | 2016-04-20 15:51 | ||||
Reporter | szy | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | All | OS Version | ||||||
Product Version | [OCCT] 6.9.1 | ||||||||
Target Version | [OCCT] 7.0.0 | Fixed in Version | [OCCT] 7.0.0 | ||||||
Summary | 0022325: Patch to fix a build failure on GNU/kFreeBSD | ||||||||
Description | Post from forum http://www.opencascade.org/org/forum/thread_20052/ [^] "Hello, here is a patch to fix a build failure on GNU/kFreeBSD Denis Barbier " | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|
(0047680) git (administrator) 2015-11-01 11:58 |
Branch CR22325 has been created by abv. SHA-1: 8f8c329323f5644cf6fc9bbd8ea87cc54bfd2cef Detailed log of new commits: Author: abv Date: Sun Nov 1 11:57:26 2015 +0300 0022325: Patch to fix a build failure on GNU/kFreeBSD |
(0047681) abv (manager) 2015-11-01 11:59 |
Please integrate CR22325, no testing is required |
(0047685) kgv (developer) 2015-11-01 13:04 |
The patch overlaps with tested #0026823 - it is better to rebase it. |
(0047688) git (administrator) 2015-11-01 14:31 |
Branch CR22325 has been updated forcibly by abv. SHA-1: e6dd8a302ecac679c6b5a3763dd4a8597c79a647 |
(0047689) abv (manager) 2015-11-01 14:32 |
CR22325 is updated to include fix made for #26823 |
(0047736) mkv (tester) 2015-11-02 19:19 |
Dear BugMaster, Branch CR22325 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: e6dd8a302ecac679c6b5a3763dd4a8597c79a647 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 149 (146 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) There is new additional compilation warnings on MacOS platform: http://jenkins-test-01.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/CR22325-master_prepare_build_occt_MacOS/1/warnings7Result/package.1721264642/ [^] OSD.cxx:132, Clang (LLVM based), Priority: Normal 'finite' is deprecated: first deprecated in OS X 10.9 OSD.cxx:136, Clang (LLVM based), Priority: Normal 'finite' is deprecated: first deprecated in OS X 10.9 OSD_Directory.cxx:65, Clang (LLVM based), Priority: Normal 'tmpnam' is deprecated: This function is provided for compatibility reasons only. Due to security concerns inherent in the design of tmpnam(3), it is highly recommended that you use mkstemp(3) instead. Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92413635 / 92242996 [+0.18%] Total CPU difference: 19748.299999999737 / 19674.139999999712 [+0.38%] products component : Total MEMORY difference: 26207444 / 26253190 [-0.17%] Total CPU difference: 7472.489999999993 / 7355.5300000000125 [+1.59%] Testing on Windows: occt component : Total MEMORY difference: 58011233 / 58031587 [-0.04%] Total CPU difference: 18206.034304598834 / 18265.314684598936 [-0.32%] products component : Total MEMORY difference: 17160312 / 17165819 [-0.03%] Total CPU difference: 5553.0895964999545 / 5706.4541795999685 [-2.69%] There are no differences in images found by testdiff. |
(0047737) mkv (tester) 2015-11-02 19:19 |
Dear abv, Branch CR22325 has been rejected due to: - additional warnings on MacOS platform |
(0047738) kgv (developer) 2015-11-02 19:28 edited on: 2015-11-02 19:28 |
OSD_Directory.cxx:65, Clang (LLVM based), Priority: Normal 'tmpnam' is deprecated: this is not a new warning - it is already registered as 0026179. OSD.cxx:132, Clang (LLVM based), Priority: Normal 'finite' is deprecated: first deprecated in OS X 10.9 these warning is most likely caused by the following change in #0026823: -#include <math.h> +#include <cmath> It should be probably subject for dedicated bug. |
(0047797) bugmaster (administrator) 2015-11-05 11:40 edited on: 2015-11-05 11:40 |
issue 0026843 has been registered for warnings: OSD.cxx:132, Clang (LLVM based), Priority: Normal 'finite' is deprecated: first deprecated in OS X 10.9 OSD.cxx:136, Clang (LLVM based), Priority: Normal 'finite' is deprecated: first deprecated in OS X 10.9 |
(0053163) git (administrator) 2016-04-17 14:26 |
Branch CR22325 has been deleted by kgv. SHA-1: e6dd8a302ecac679c6b5a3763dd4a8597c79a647 |
![]() |
|||
occt: master a5916aa2
Timestamp: 2015-11-01 08:57:26 Author: abv Committer: bugmaster [ Details ] [ Diff ] |
0022325: Patch to fix a build failure on GNU/kFreeBSD | ||
mod - src/OSD/OSD_Path.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2011-03-18 17:05 | bugmaster | Status | closed => assigned |
2011-03-18 17:05 | bugmaster | Resolution | suspended => @0@ |
2011-03-18 17:05 | bugmaster | Assigned To | bugmaster => inv |
2011-08-02 11:23 | bugmaster | Category | OCCT:FDC => OCCT:Foundation Classes |
2011-11-24 10:35 | szy | Fixed in Version | EMPTY => |
2011-11-24 10:35 | szy | Description Updated | View Revisions |
2011-11-24 10:36 | szy | File Added: kfreebsd.patch | |
2015-11-01 11:58 | git | Note Added: 0047680 | |
2015-11-01 11:58 | abv | Assigned To | inv => abv |
2015-11-01 11:58 | abv | Status | assigned => resolved |
2015-11-01 11:58 | abv | Steps to Reproduce Updated | View Revisions |
2015-11-01 11:59 | abv | Note Added: 0047681 | |
2015-11-01 11:59 | abv | Assigned To | abv => bugmaster |
2015-11-01 11:59 | abv | Status | resolved => reviewed |
2015-11-01 13:04 | kgv | Note Added: 0047685 | |
2015-11-01 13:05 | kgv | Product Version | => 6.9.1 |
2015-11-01 13:05 | kgv | Target Version | => 7.0.0 |
2015-11-01 14:31 | git | Note Added: 0047688 | |
2015-11-01 14:32 | abv | Note Added: 0047689 | |
2015-11-02 12:16 | mkv | Assigned To | bugmaster => mkv |
2015-11-02 19:19 | mkv | Note Added: 0047736 | |
2015-11-02 19:19 | mkv | Assigned To | mkv => abv |
2015-11-02 19:19 | mkv | Status | reviewed => assigned |
2015-11-02 19:19 | mkv | Test case number | => Not needed |
2015-11-02 19:19 | mkv | Note Added: 0047737 | |
2015-11-02 19:28 | kgv | Note Added: 0047738 | |
2015-11-02 19:28 | kgv | Note Edited: 0047738 | View Revisions |
2015-11-05 11:25 | kgv | Assigned To | abv => bugmaster |
2015-11-05 11:25 | kgv | Status | assigned => feedback |
2015-11-05 11:40 | bugmaster | Note Added: 0047797 | |
2015-11-05 11:40 | bugmaster | Status | feedback => tested |
2015-11-05 11:40 | bugmaster | Note Edited: 0047797 | View Revisions |
2015-11-06 12:35 | bugmaster | Changeset attached | => occt master a5916aa2 |
2015-11-06 12:35 | bugmaster | Status | tested => verified |
2015-11-06 12:35 | bugmaster | Resolution | open => fixed |
2016-04-17 14:26 | git | Note Added: 0053163 | |
2016-04-20 15:42 | aiv | Fixed in Version | => 7.0.0 |
2016-04-20 15:51 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |