0022325: Patch to fix a build failure on GNU/kFreeBSD